2009-02-19  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: fix nodetree plugin resolver

2009-02-17  Badlop  <badlop@process-one.net>

	* src/ejabberd_listener.erl: More error detections

2009-02-16  Badlop  <badlop@process-one.net>

	* src/ejabberd_config.erl: Check certfiles are readable on server
	start and listener start (EJAB-753)
	* src/ejabberd_listener.erl: Likewise

	* src/mod_privacy.erl: Privacy List: deny presence-out all + send
	presence to: presence is sent (EJAB-255)
	* src/ejabberd_c2s.erl: Likewise

	* src/mod_muc/mod_muc_room.erl: Owner of a password protected room
	must provide the password, like other participants (EJAB-867)

	* src/mod_muc/mod_muc_log.erl: Prevent XSS in MUC logs by
	linkifying only a few known protocols (EJAB-850)

	* src/mod_muc/mod_muc.erl: Export function to create MUC
	room (thanks to Eric Cestari) (EJAB-729)

	* src/mod_roster.erl: When account is deleted, cancel presence
	subscription for all roster items (EJAB-790)
	* src/mod_roster_odbc.erl: Likewise

2009-02-14  Badlop  <badlop@process-one.net>

	* src/web/ejabberd_http_poll.erl: Allow configuration of session
	timeout, using new global option http_poll_timeout (EJAB-135)
	* doc/guide.tex: Document new option
	* doc/guide.html: Likewise

	* src/ejabberd_listener.erl: Report error at startup if a listener
	module isn't available or is not an ejabberd listener (EJAB-868)

2009-02-13  Badlop  <badlop@process-one.net>

	* src/mod_shared_roster.erl: Fix bug: a pending subscription
	request, and later the requester added to the roster due to a
	shared roster group, that request could neither be accepted or
	rejected (thanks to Brian Cully)(EJAB-869)

	* src/web/ejabberd_web_admin.erl: Show big integers with comma
	separators for easy reading

	* src/ejabberd_system_monitor.erl: Allow parametrizable watchdog
	threshold: option watchdog_large_heap or chatting with the
	watchdog bot (EJAB-545)
	* src/ejabberd_config.erl: Likewise